# recommender_system

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  test.py
.dvc/: config
.github/workflows/: ci.yml
data/: user_history.csv.dvc
data/processed/: interactions.csv  interactions.csv.dvc
models/: delivery_estimator.onnx.dvc
scripts/: quality_gate.py  train_model.py  train_recommender.py
src/recommender_system/application/: recommendation_model_service.py  recommendation_service.py  services.py
src/recommender_system/domain/: entities.py  interfaces.py
src/recommender_system/infrastructure/: collaborative.py  onnx_model.py  storage.py
src/recommender_system/presentation/: api.py  celery_app.py  cli.py  dependencies.py  recommendation_loader.py  tasks.py  train.py
tests/: test_api.py  test_async_api.py  test_data_sync_service.py  test_recommendation_service.py
