[project]
name = "recommender-system"
version = "0.1.0"
description = "Recommender System - Clean Architecture (Lab 1)"
authors = [
    {name = "lolovlad",email = "lolovlad33@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "dvc[s3] (>=3.66.1,<4.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "skl2onnx (>=1.20.0,<2.0.0)",
    "pandas (>=1.5,<3.0)",
    "fastapi (>=0.128.5,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "onnxruntime (>=1.24.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
]

[tool.poetry]
packages = [{include = "recommender_system", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
